# dodo-tasks

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: design-philosophy.md
.dodo/review-fixes/: dodo.db  dodo.json
docs/: mcp-tool-design.md
docs/learnings/: 2025-01-11-interactive-ui-enhancements.md  2025-01-12-architectural-patterns-from-plans.md  2026-01-09-terminal-ui-editor-integration.md  2026-01-09-uv-tool-caching.md  2026-01-10-plugin-system-implementation.md  2026-01-10-startup-performance-optimization.md
docs/plans/: 2025-01-09-dodo-cli-design.md  2025-01-09-dodo-implementation.md  2025-01-11-plugin-v2-audit.md  2026-01-09-dependency-tracking-design.md  2026-01-09-dodo-interactive-menu-audit.md  2026-01-09-dodo-interactive-menu-cleanup-plan.md  2026-01-10-dodo-audit.md  2026-01-10-dodo-cleanup-plan.md  2026-01-10-formatters-design.md  2026-01-10-ntfy-inbox-plugin-design.md  2026-01-10-plugin-system-design.md  2026-01-10-plugin-system-v2-design.md  2026-01-10-plugin-v2-implementation.md  2026-01-11-dodo-cleanup-plan.md  2026-01-11-plugin-command-formatter-impl.md  2026-01-11-plugin-command-formatter-registration-design.md  2026-01-12-ai-dodo-management-design.md  2026-01-12-ai-dodo-management.md  2026-01-12-audit-cleanup-plan.md  2026-01-12-backend-restructure-audit.md  2026-01-12-backend-restructure-design.md  2026-01-12-backend-restructure-impl.md  2026-01-13-ai-plugin-design.md  (+14 more)
examples/: dodo-command.md
tests/: conftest.py  test_ai.py  test_ai_commands.py  test_ai_security.py  test_api.py  test_bulk.py  test_cli.py  test_cli_bulk.py  test_cli_partial_id.py  test_cli_plugins.py  test_config.py  test_config_errors.py  test_core.py  test_formatters.py  test_graph_plugin.py  test_integration.py  test_lazy_loading.py  test_mcp_dispatch.py  test_models.py  test_plugins.py  test_project.py  test_project_config.py  test_project_errors.py  test_server_api.py  test_server_mcp.py  test_server_remote.py  test_webhook.py
(+104 files in other folders)
