[project]
name = "dodo"
version = "0.6.0"
description = "Todo router - manage todos across multiple backends"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.0",
    "httpx>=0.27.0",
    "readchar>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
server = [
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
dodo = "dodo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["no-untyped-def", "type-arg", "attr-defined", "valid-type", "var-annotated", "index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
